🎨 完成TaskFlow品牌重塑 - 从儿童应用转为专业效率工具
🔄 品牌重新定位：
✅ 应用名称：儿童任务管理 → TaskFlow
✅ 定位：儿童管理工具 → 专业的个人效率提升工具
✅ 目标用户：家长 → 专业人士、学生、自由职业者

🎨 视觉标识系统：
✅ 创建专业TaskFlow Logo（6个尺寸）
✅ iOS应用图标完整集合
✅ Web版favicon和品牌图标
✅ iOS标准色彩系统（#007AFF主色）

📱 界面更新：
✅ Web版标题和描述重写
✅ 应用图标和品牌元素更新
✅ 示例数据从儿童场景改为工作场景
✅ 所有用户界面文案专业化

📚 文档重构：
✅ README.md主文档更新
✅ Web客户端文档更新
✅ 服务器描述和帮助信息更新
✅ 创建品牌重塑总结文档

🔧 技术保持：
✅ 所有现有功能完全保留
✅ 数据库结构无需修改
✅ 实时同步功能不变
✅ 跨平台特性保持

现在TaskFlow是一个真正专业的个人效率提升工具！

--- a/web-client/index.html
+++ b/web-client/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>儿童任务管理 - Web版</title>
+    <title>TaskFlow - 高效任务管理</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="description" content="TaskFlow - 专业的个人效率提升工具，支持实时同步、智能分类、时间管理">
+    <meta name="keywords" content="任务管理,效率工具,时间管理,GTD,生产力,TaskFlow">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -1073,10 +1076,10 @@
         <div class="main-content">
             <div class="app-header">
                 <h1 class="app-title">
-                    <i class="fas fa-tasks"></i>
-                    儿童任务管理
+                    <i class="fas fa-stream"></i>
+                    TaskFlow
                 </h1>
-                <p class="app-subtitle">与iOS应用实时同步的Web版本</p>
+                <p class="app-subtitle">专业的个人效率提升工具</p>
             </div>
 
             <div class="content-area">
@@ -1084,7 +1087,7 @@
                     <div class="header-top">
                         <div>
                             <h2 class="content-title">我的任务</h2>
-                            <p class="content-subtitle">管理您的日常任务，与iOS应用实时同步</p>
+                            <p class="content-subtitle">高效管理，实时同步，让每一天都更有条理</p>
                         </div>
 
                         <!-- 视图切换 -->
