🏢 实现工作管理系统基础功能 - Phase 1
✨ 新增功能：
✅ 工作分类系统 - 添加工作分类并设为默认
✅ 工作进度管理 - 支持进度百分比、时间投入、进度说明
✅ 工作中心界面 - 今日工作、本周概览、下周规划
✅ 工作进度更新 - 滑动条更新进度、记录时间投入
✅ 每日工作报告 - 自动生成工作汇报和统计

🎯 核心组件：
✅ WorkManager - 工作数据管理和报告生成
✅ WorkCenterView - 工作中心主界面
✅ WorkProgressUpdateView - 进度更新界面
✅ DailyReportView - 每日报告展示

📊 数据模型扩展：
✅ TaskItem新增工作进度字段
✅ WebSocket协议支持工作数据同步
✅ 跨平台数据一致性保证

🎨 界面优化：
✅ 工作任务特殊标识和进度条
✅ iOS风格的统计卡片和图表
✅ Web版工作分类筛选器

下一步：实现18:00自动汇报和工作思考功能

--- a/web-client/index.html
+++ b/web-client/index.html
@@ -1114,9 +1114,11 @@
                         <button class="filter-btn active" data-filter="all">全部</button>
                         <button class="filter-btn" data-filter="pending">待完成</button>
                         <button class="filter-btn" data-filter="completed">已完成</button>
-                        <button class="filter-btn" data-filter="学习">学习</button>
-                        <button class="filter-btn" data-filter="运动">运动</button>
-                        <button class="filter-btn" data-filter="娱乐">娱乐</button>
+                        <button class="filter-btn" data-filter="工作">💼 工作</button>
+                        <button class="filter-btn" data-filter="学习">📚 学习</button>
+                        <button class="filter-btn" data-filter="运动">🏃 运动</button>
+                        <button class="filter-btn" data-filter="娱乐">🎮 娱乐</button>
+                        <button class="filter-btn" data-filter="生活">🏠 生活</button>
                     </div>
 
                     <!-- 排序 -->
@@ -1221,9 +1223,11 @@
                 <div class="form-group">
                     <label class="form-label">分类</label>
                     <select class="form-select" id="taskCategory">
+                        <option value="工作">💼 工作</option>
                         <option value="学习">📚 学习</option>
                         <option value="运动">🏃 运动</option>
                         <option value="娱乐">🎮 娱乐</option>
+                        <option value="生活">🏠 生活</option>
                         <option value="其他">📝 其他</option>
                     </select>
                 </div>
