📋 完成复制功能优化和Web端报告功能
🎯 **iOS端优化**：
✅ 移除复制文本中的进度信息，保持简洁格式
✅ 日报复制：今日待完成和未来安排不显示进度百分比
✅ 周报复制：下周计划不显示当前进度信息
✅ 复制的文本更加简洁，便于分享和使用

🌐 **Web端新增功能**：
✅ 在快速操作区域添加生成日报和生成周报按钮
✅ 实现完整的报告模态框，支持日报和周报生成
✅ 添加复制按钮，一键复制结构化报告文本
✅ 复制成功后显示视觉反馈提示

📱 **Web端报告功能**：
✅ 日报包含：今日工作内容、工作总结、下一步计划、统计概览
✅ 周报包含：本周工作内容、工作总结、下周计划、本周统计
✅ 支持按类型分组显示和统计
✅ 智能日期格式化（今天、明天、后天、具体日期）

🎨 **用户体验**：
✅ 响应式设计，适配不同屏幕尺寸
✅ 美观的卡片式统计展示
✅ 支持ESC键和点击外部关闭模态框
✅ 复制成功后按钮变绿并显示已复制提示

🔧 **技术实现**：
✅ 完整的HTML报告生成系统
✅ 纯文本格式转换，保持结构化
✅ 智能任务过滤和分类统计
✅ 跨平台一致的报告格式

🚀 **现在iOS和Web端都支持完整的报告生成和复制功能！**

--- a/web-client/index.html
+++ b/web-client/index.html
@@ -1012,6 +1012,94 @@
                 margin: 16px;
             }
         }
+
+        /* 报告样式 */
+        .report-content {
+            padding: 24px;
+            line-height: 1.8;
+            font-size: 14px;
+            color: var(--text-primary);
+        }
+
+        .report-section {
+            margin-bottom: 32px;
+        }
+
+        .report-section-title {
+            font-size: 18px;
+            font-weight: 600;
+            color: var(--primary-color);
+            margin-bottom: 16px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .report-subsection {
+            margin-bottom: 20px;
+        }
+
+        .report-subsection-title {
+            font-size: 16px;
+            font-weight: 500;
+            color: var(--secondary-color);
+            margin-bottom: 12px;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .report-list {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .report-list li {
+            padding: 8px 0;
+            border-bottom: 1px solid var(--border-color);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .report-list li:last-child {
+            border-bottom: none;
+        }
+
+        .report-task-title {
+            font-weight: 500;
+        }
+
+        .report-task-meta {
+            font-size: 12px;
+            color: var(--text-tertiary);
+        }
+
+        .report-stats {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 16px;
+            margin-top: 16px;
+        }
+
+        .report-stat-card {
+            background: var(--background-tertiary);
+            padding: 16px;
+            border-radius: var(--border-radius);
+            text-align: center;
+        }
+
+        .report-stat-value {
+            font-size: 24px;
+            font-weight: 600;
+            color: var(--primary-color);
+        }
+
+        .report-stat-label {
+            font-size: 12px;
+            color: var(--text-tertiary);
+            margin-top: 4px;
+        }
     </style>
 </head>
 <body>
@@ -1056,6 +1144,14 @@
                     <button class="quick-action-btn" onclick="clearCompleted()">
                         <i class="fas fa-trash"></i>
                         清理已完成
+                    </button>
+                    <button class="quick-action-btn" onclick="generateDailyReport()">
+                        <i class="fas fa-file-alt"></i>
+                        生成日报
+                    </button>
+                    <button class="quick-action-btn" onclick="generateWeeklyReport()">
+                        <i class="fas fa-chart-line"></i>
+                        生成周报
                     </button>
                 </div>
             </div>
@@ -1256,6 +1352,28 @@
                     </button>
                 </div>
             </form>
+        </div>
+    </div>
+
+    <!-- 报告模态框 -->
+    <div class="add-task-modal" id="reportModal">
+        <div class="modal-content" style="max-width: 800px; max-height: 80vh; overflow-y: auto;">
+            <div class="modal-header">
+                <h3 class="modal-title" id="reportTitle">工作报告</h3>
+                <div style="display: flex; gap: 12px; align-items: center;">
+                    <button class="btn-primary" onclick="copyReportText()" style="padding: 8px 16px; font-size: 14px;">
+                        <i class="fas fa-copy"></i>
+                        复制
+                    </button>
+                    <button class="close-btn" onclick="hideReportModal()">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+            </div>
+
+            <div class="report-content" id="reportContent">
+                <!-- 报告内容将在这里动态生成 -->
+            </div>
         </div>
     </div>
 
